--- a/sections/lotion-lp.liquid
+++ b/sections/lotion-lp.liquid
@@ -2,9 +2,14 @@
 
 {% schema %}
     {
+        "name": "teste lotion",
         "settings": [
-            "type": "text",
-            "product "
+            {
+                "type": "text",
+                "id": "text_id",
+                "label": "Insira o texto aqui"
+            }
+            
         ]
     }
 {%endschema%}
