feat: adicionando tag main

--- a/sections/lotion-lp.liquid
+++ b/sections/lotion-lp.liquid
@@ -1,4 +1,23 @@
-<h1>{{ shop.name }}</h1>
+{{ section.settings.text_id }}
+
+<main class="lotion">
+    <div class="container">
+        <header class="lotion_header">
+        <h1> Lotion Co. by Frederico </h1>
+        <p class="lotion_paragrafo">Conheça nossas loções</p>
+        </header>
+
+
+    </div>
+
+
+
+    <article>
+        <div>
+            {{ page.content }}
+        </div>
+    </article>
+</main>
 {% schema %}
     {
         "name": "teste lotion",
