--- a/sections/lotion-lp.liquid
+++ b/sections/lotion-lp.liquid
@@ -1,10 +1,10 @@
 {{ section.settings.teste_lotion }}
 
-<main class="lotion">
+<main class="lotion_container">
     <article>
         <h1>{{ page.title }}</h1>
 
-        <div class="lotion_container">
+        <div class="page_content">
             {{ page.content }}
         </div>
     </article>
