--- a/sections/lotion-lp.liquid
+++ b/sections/lotion-lp.liquid
@@ -1,5 +1,4 @@
-  <h1>{{ page.title }}</h1>
-{{ section.settings.teste_lotion }}
+ {{ section.settings.lotion-lp }}
 
 <main class="lotion_container">
     <article>
@@ -13,7 +12,7 @@
 
 {% schema %}
     {
-        "name": "teste_lotion",
+        "name": "lotion-lp",
         "settings": [
             {
                 "type": "text",
@@ -21,6 +20,6 @@
                 "label": "Insira o texto aqui"
             }
         ]
-    }
+    } 
 {%endschema%}
 
