feat: Iniciando o Olá mundo

--- a/sections/lotion-lp.liquid
+++ b/sections/lotion-lp.liquid
@@ -1,4 +1,4 @@
- {{ section.settings.lotion-lp }}
+<h1>Olá mundo</h1>
 
 <main class="lotion_container">
     <article>
@@ -8,18 +8,12 @@
             {{ page.content }}
         </div>
     </article>
+
 </main>
 
 {% schema %}
     {
-        "name": "lotion-lp",
-        "settings": [
-            {
-                "type": "text",
-                "id": "text_id",
-                "label": "Insira o texto aqui"
-            }
-        ]
+        "name": "lotion-lp"
     } 
 {%endschema%}
 
