--- a/sections/lotion-lp.liquid
+++ b/sections/lotion-lp.liquid
@@ -1,19 +1,20 @@
-<h1>Olá mundo</h1>
+<header>
+    <h1>oi</h1>
+</header>
 
-<main class="lotion_container">
-    <article>
-        <h1>{{ page.title }}</h1>
 
-        <div class="page_content">
-            {{ page.content }}
-        </div>
-    </article>
-
-</main>
 
 {% schema %}
-    {
-        "name": "lotion-lp"
-    } 
-{%endschema%}
+{
+    "name": "lotion-lp",
+    "settings": [
+        
+        ],
+        "presets": [
+            {
+                "name": "lotion-lp"
+            }
+        ]
+}
+{% endschema %}
 
